--- a/Pages/templates/Pages/HomePage.html
+++ b/Pages/templates/Pages/HomePage.html
@@ -1,3 +1,73 @@
 {% extends 'Pages/base_HomePage.html' %}
 {% load static %}
 
+
+{% block banner_area %}
+    <section class="banner-area">
+        <div class="container">
+            <div class="row fullscreen align-items-center justify-content-start">
+                <div class="col-lg-12">
+                    <div class="active-banner-slider owl-carousel">
+                        <!-- single-slide -->
+                        <div class="row single-slide align-items-center d-flex">
+                            <div class="col-lg-5 col-md-6">
+                                <div class="banner-content">
+                                    <h1>Nike New <br>Collection!</h1>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+                                        dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
+                                    <div class="add-bag d-flex align-items-center">
+                                        <a class="add-btn" href=""><span class="lnr lnr-cross"></span></a>
+                                        <span class="add-text text-uppercase">Add to Bag</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-7">
+                                <div class="banner-img">
+                                    <img class="img-fluid" src="img/banner/banner-img.png" alt="">
+                                </div>
+                            </div>
+                        </div>
+                        <!-- single-slide -->
+                        <div class="row single-slide">
+                            <div class="col-lg-5">
+                                <div class="banner-content">
+                                    <h1>Nike New <br>Collection!</h1>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+                                        dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
+                                    <div class="add-bag d-flex align-items-center">
+                                        <a class="add-btn" href=""><span class="lnr lnr-cross"></span></a>
+                                        <span class="add-text text-uppercase">Add to Bag</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-7">
+                                <div class="banner-img">
+                                    <img class="img-fluid" src="img/banner/banner-img.png" alt="">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+{% endblock %}
+
+{% block categories %}
+    <div class="col-xl-3 col-lg-4 col-md-5">
+        <div class="sidebar-categories" style="padding-top: 50px; padding-bottom: 50px">
+            <div class="head">Доступные категории</div>
+            <ul class="main-categories">
+            {% for main_category in all_categories %}
+                <li class="main-nav-list"><a data-toggle="collapse" href="#{{ main_category.slug }}" aria-expanded="false" aria-controls="fruitsVegetable"><span
+                         class="lnr lnr-arrow-right"></span>{{ main_category.key }}<span class="number">({{ main_category.count }})</span></a>
+                    <ul class="collapse" id="{{ main_category.slug }}" data-toggle="collapse" aria-expanded="false" aria-controls="{{ main_category.slug }}">
+                        {% for child_category in main_category.child_categories %}
+                            <li class="main-nav-list child"><a href="{{ child_category.get_absolute_url }}">{{ child_category.title }}<span class="number"></span></a></li>
+                        {% endfor %}
+                    </ul>
+                </li>
+            {% endfor %}
+        </div>
+    </div>
+{% endblock %}
