--- a/Pages/templates/Pages/Categories.html
+++ b/Pages/templates/Pages/Categories.html
@@ -55,7 +55,7 @@
                                             <h6>₽ {{ product.price }}</h6>
                                         </div>
                                         <div class="prd-bottom">
-                                            <a href="" class="social-info">
+                                            <a href="{{ product.category.add_to_bag_url }}" class="social-info">
                                                 <span class="ti-bag"></span>
                                                 <p class="hover-text">в корзину</p>
                                             </a>
