--- a/Pages/templates/Pages/HomePage.html
+++ b/Pages/templates/Pages/HomePage.html
@@ -1,6 +1,7 @@
 {% extends 'Pages/base_HomePage.html' %}
 {% load static %}
 
+{% block homepage_is_active %} active {% endblock %}
 
 {% block banner_area %}
     <section class="banner-area">
@@ -9,43 +10,25 @@
                 <div class="col-lg-12">
                     <div class="active-banner-slider owl-carousel">
                         <!-- single-slide -->
-                        <div class="row single-slide align-items-center d-flex">
-                            <div class="col-lg-5 col-md-6">
-                                <div class="banner-content">
-                                    <h1>Nike New <br>Collection!</h1>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-                                        dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
-                                    <div class="add-bag d-flex align-items-center">
-                                        <a class="add-btn" href=""><span class="lnr lnr-cross"></span></a>
-                                        <span class="add-text text-uppercase">Add to Bag</span>
+                        {% for new in news %}
+                            <div class="row single-slide align-items-center d-flex">
+                                <div class="col-lg-5 col-md-6">
+                                    <div class="banner-content">
+                                        <h1>{{ new.title }}</h1>
+                                        <p>{{ new.short_description }}</p>
+                                        <div class="add-bag d-flex align-items-center">
+                                            <a class="add-btn" href=""><span class="lnr lnr-cross"></span></a>
+                                            <span class="add-text text-uppercase">В корзину</span>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-lg-7">
+                                    <div class="banner-img">
+                                        <img class="img-fluid" src="img/banner/banner-img.png" alt="">
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-7">
-                                <div class="banner-img">
-                                    <img class="img-fluid" src="img/banner/banner-img.png" alt="">
-                                </div>
-                            </div>
-                        </div>
-                        <!-- single-slide -->
-                        <div class="row single-slide">
-                            <div class="col-lg-5">
-                                <div class="banner-content">
-                                    <h1>Nike New <br>Collection!</h1>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-                                        dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
-                                    <div class="add-bag d-flex align-items-center">
-                                        <a class="add-btn" href=""><span class="lnr lnr-cross"></span></a>
-                                        <span class="add-text text-uppercase">Add to Bag</span>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-lg-7">
-                                <div class="banner-img">
-                                    <img class="img-fluid" src="img/banner/banner-img.png" alt="">
-                                </div>
-                            </div>
-                        </div>
+                        {% endfor %}
                     </div>
                 </div>
             </div>
