--- a/Pages/templates/Pages/Categories.html
+++ b/Pages/templates/Pages/Categories.html
@@ -56,7 +56,7 @@
                                         </div>
                                         <div class="prd-bottom">
                                             {% if user.is_authenticated %}
-                                               <a href="{{ product.category.add_to_bag_url }}" class="social-info">
+                                               <a onclick="AddProductToBag(this)" id="{{ product.id }}" class="social-info">
                                                    <span class="ti-bag"></span>
                                                    <p class="hover-text">в корзину</p>
                                                </a>
