--- a/templates/base.html
+++ b/templates/base.html
@@ -30,6 +30,29 @@
 	<link rel="stylesheet" href="{% static 'frontend/css/ion.rangeSlider.skinFlat.css' %}"/>
 	<link rel="stylesheet" href="{% static 'frontend/css/magnific-popup.css' %}">
 	<link rel="stylesheet" href="{% static 'frontend/css/main.css' %}">
+    <script>
+        async function AddProductToBag(element) {
+            let id = element.getAttribute('id');
+            let address = "http://127.0.0.1:8000";
+            try {
+                const response = await fetch(address, {
+                method: 'POST',
+                headers: {
+                    'Accept': 'application/json',
+                    'Content-Type': 'application/json',
+                    'X-CSRFToken': "{{ csrf_token }}"
+                },
+                body: JSON.stringify({ "id": id })
+            })
+            .then(response => response.json())
+            .then(response => console.log(response))
+            } catch (e) {
+                console.log(e)
+
+            }
+
+        }
+        </script>
 </head>
 
 <body>
@@ -144,6 +167,7 @@
         <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCjCGmQ0Uq4exrzdcL6rvxywDDOvfAu6eE"></script>
         <script src="{% static 'frontend/js/gmaps.min.js' %}"></script>
         <script src="{% static 'frontend/js/main.js' %}"></script>
+
     </body>
 </html>
 
